--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "## Challenge",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client": "npm start --prefix client",
+    "server": "npm run server --prefix server",
+    "client-install": "npm install --prefix client",
+    "server-install": "npm install --prefix server",
+    "build": "npm run build --prefix client",
+    "dev": "concurrently \"npm run client \" \"npm run server \"  "
   },
   "repository": {
     "type": "git",
