--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.5.4",
     "axios": "^0.19.2",
+    "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
